--- a/style.css
+++ b/style.css
@@ -1,38 +1,54 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #121212;
-    color: #ffffff;
-  }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #121212;
+  color: #ffffff;
+}
+
+.header {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.twitch-logo {
+  width: 50px; /* Adjust size as needed */
+  height: auto; /* Maintain aspect ratio */
+}
+
+.channel-title {
+  margin: 0;
+}
+
+.channel-link {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+table {
+  width: 80%;
+  margin: auto;
+  border-collapse: collapse;
+  background-color: #1f1f1f;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   
-  h1 {
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  
-  table {
-    width: 80%;
-    margin: auto;
-    border-collapse: collapse;
-    background-color: #1f1f1f;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
-  
-  th, td {
-    padding: 16px; /* Bigger padding */
-    text-align: left;
-    border-bottom: 1px solid #444;
-    font-size: 16px; /* Bigger font size */
-  }
-  
-  th {
-    background-color: #333;
-    color: #ffffff;
-  }
-  
-  tr:hover {
-    background-color: #333;
-  }
-  
+}
+
+th, td {
+  padding: 16px; /* Bigger padding */
+  text-align: left;
+  border-bottom: 1px solid #444;
+  font-size: 16px; /* Bigger font size */
+}
+
+th {
+  background-color: #333;
+  color: #ffffff;
+}
+
+tr:hover {
+  background-color: #333;
+}
+
+tr:nth-child(even) {background-color: #333;}
